# wlroots

./: .gitignore  meson.build  meson_options.txt
backend/: backend.c  meson.build
backend/hwcomposer/: backend.c  hwcomposer.c  hwcomposer2.c  meson.build  output.c
backend/libinput/: backend.c  switch.c
debian/: changelog  control  copyright  libwlroots12t64.lintian-overrides  libwlroots12t64.shlibs  rules
debian/patches/: examples-dmabuf-capture-fix-frame_number-deprecated-.patch  series  xwayland-xwm-unpair-even-if-surface-is-NULL.patch
include/backend/: hwcomposer.h
include/render/: android.h  egl.h  gles2.h  pass.h
include/wlr/: config.h.in
include/wlr/backend/: hwcomposer.h
include/wlr/render/: android.h  egl.h  interface.h  pass.h  wlr_renderer.h
include/wlr/types/: wlr_android_wlegl.h  wlr_damage_ring.h  wlr_output.h
protocol/: meson.build  wayland-android.xml
render/: egl.c  meson.build  pass.c  wlr_renderer.c
render/android/: meson.build  renderer.c
render/gles2/: .pixel_format.c.swp  renderer.c  texture.c
render/gles2/shaders/: tex_external.frag
types/: meson.build  wlr_damage_ring.c  wlr_layer_shell_v1.c  wlr_screencopy_v1.c
types/android_wlegl/: wlr_android_wlegl.c
types/output/: output.c  render.c  swapchain.c
types/scene/: wlr_scene.c
